(feat): Fase 3 Generación asíncrona de reportes con javafx.concurrent.Task (sin congelar la UI) y tests de PDFBuilder.